--- a/AC-iOS-Final/Podfile
+++ b/AC-iOS-Final/Podfile
@@ -7,7 +7,9 @@ target 'AC-iOS-Final' do
 
   # Pods for AC-iOS-Final
 
-pod 'Firebase/Core'
-pod 'Firebase/Database' 
+    pod 'Firebase/Core'
+    pod 'Firebase/Database'
+    pod 'Firebase/Auth'
+    pod 'Firebase/Storage'
 
 end
