--- a/AC-iOS-Final/Podfile
+++ b/AC-iOS-Final/Podfile
@@ -11,5 +11,6 @@ target 'AC-iOS-Final' do
     pod 'Firebase/Database'
     pod 'Firebase/Auth'
     pod 'Firebase/Storage'
+    pod 'Kingfisher'
 
 end
